build/log/idf_py_stdout_output_51637
[1/14] Performing build step for 'ulp_main'
FAILED: esp-idf/rot_btn_i2c_riscv/ulp_main-prefix/src/ulp_main-stamp/ulp_main-build esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.bin esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.ld esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.h esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.map esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.sym esp-idf/rot_btn_i2c_riscv/ulp_main/esp32.ulp.ld esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main-prefix/src/ulp_main-stamp/ulp_main-build /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.bin /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.ld /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.h /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.map /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main.sym /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/esp32.ulp.ld /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main/ulp_main 
cd /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main && /usr/bin/cmake --build /home/iris/Development/Source/esp-idf-TCA9555/build/esp-idf/rot_btn_i2c_riscv/ulp_main --target build
[1/5] Building C object CMakeFiles/ulp_main.dir/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c.obj
FAILED: CMakeFiles/ulp_main.dir/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c.obj 
/home/iris/.espressif/tools/riscv32-esp-elf/esp-12.2.0_20230208/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DIS_ULP_COCPU -I/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/include -I/home/iris/Development/Source/esp-idf-TCA9555/build/config -I/opt/esp32/esp-adf/esp-idf/components/newlib/platform_include -I/opt/esp32/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp32/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp32/esp-adf/esp-idf/components/freertos/esp_additions/include/freertos -I/opt/esp32/esp-adf/esp-idf/components/freertos/esp_additions/include -I/opt/esp32/esp-adf/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/opt/esp32/esp-adf/esp-idf/components/esp_hw_support/include -I/opt/esp32/esp-adf/esp-idf/components/esp_hw_support/include/soc -I/opt/esp32/esp-adf/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/opt/esp32/esp-adf/esp-idf/components/esp_hw_support/port/esp32s3/. -I/opt/esp32/esp-adf/esp-idf/components/heap/include -I/opt/esp32/esp-adf/esp-idf/components/log/include -I/opt/esp32/esp-adf/esp-idf/components/soc/include -I/opt/esp32/esp-adf/esp-idf/components/soc/esp32s3 -I/opt/esp32/esp-adf/esp-idf/components/soc/esp32s3/include -I/opt/esp32/esp-adf/esp-idf/components/hal/esp32s3/include -I/opt/esp32/esp-adf/esp-idf/components/hal/include -I/opt/esp32/esp-adf/esp-idf/components/hal/platform_port/include -I/opt/esp32/esp-adf/esp-idf/components/esp_rom/include -I/opt/esp32/esp-adf/esp-idf/components/esp_rom/include/esp32s3 -I/opt/esp32/esp-adf/esp-idf/components/esp_rom/esp32s3 -I/opt/esp32/esp-adf/esp-idf/components/esp_common/include -I/opt/esp32/esp-adf/esp-idf/components/esp_system/include -I/opt/esp32/esp-adf/esp-idf/components/esp_system/port/soc -I/opt/esp32/esp-adf/esp-idf/components/esp_system/port/include/private -I/opt/esp32/esp-adf/esp-idf/components/xtensa/include -I/opt/esp32/esp-adf/esp-idf/components/xtensa/esp32s3/include -I/opt/esp32/esp-adf/esp-idf/components/lwip/include -I/opt/esp32/esp-adf/esp-idf/components/lwip/include/apps -I/opt/esp32/esp-adf/esp-idf/components/lwip/include/apps/sntp -I/opt/esp32/esp-adf/esp-idf/components/lwip/lwip/src/include -I/opt/esp32/esp-adf/esp-idf/components/lwip/port/include -I/opt/esp32/esp-adf/esp-idf/components/lwip/port/freertos/include -I/opt/esp32/esp-adf/esp-idf/components/lwip/port/esp32xx/include -I/opt/esp32/esp-adf/esp-idf/components/lwip/port/esp32xx/include/arch -I/opt/esp32/esp-adf/esp-idf/components/ulp/ulp_common/include -I/opt/esp32/esp-adf/esp-idf/components/ulp/ulp_common/include/esp32s3 -I/opt/esp32/esp-adf/esp-idf/components/ulp/ulp_riscv/include -I/opt/esp32/esp-adf/esp-idf/components/ulp/ulp_riscv/shared/include -I/opt/esp32/esp-adf/esp-idf/components/driver/include -I/opt/esp32/esp-adf/esp-idf/components/driver/deprecated -I/opt/esp32/esp-adf/esp-idf/components/driver/analog_comparator/include -I/opt/esp32/esp-adf/esp-idf/components/driver/dac/include -I/opt/esp32/esp-adf/esp-idf/components/driver/gpio/include -I/opt/esp32/esp-adf/esp-idf/components/driver/gptimer/include -I/opt/esp32/esp-adf/esp-idf/components/driver/i2c/include -I/opt/esp32/esp-adf/esp-idf/components/driver/i2s/include -I/opt/esp32/esp-adf/esp-idf/components/driver/ledc/include -I/opt/esp32/esp-adf/esp-idf/components/driver/mcpwm/include -I/opt/esp32/esp-adf/esp-idf/components/driver/parlio/include -I/opt/esp32/esp-adf/esp-idf/components/driver/pcnt/include -I/opt/esp32/esp-adf/esp-idf/components/driver/rmt/include -I/opt/esp32/esp-adf/esp-idf/components/driver/sdio_slave/include -I/opt/esp32/esp-adf/esp-idf/components/driver/sdmmc/include -I/opt/esp32/esp-adf/esp-idf/components/driver/sigma_delta/include -I/opt/esp32/esp-adf/esp-idf/components/driver/spi/include -I/opt/esp32/esp-adf/esp-idf/components/driver/temperature_sensor/include -I/opt/esp32/esp-adf/esp-idf/components/driver/touch_sensor/include -I/opt/esp32/esp-adf/esp-idf/components/driver/twai/include -I/opt/esp32/esp-adf/esp-idf/components/driver/uart/include -I/opt/esp32/esp-adf/esp-idf/components/driver/usb_serial_jtag/include -I/opt/esp32/esp-adf/esp-idf/components/driver/touch_sensor/esp32s3/include -I/opt/esp32/esp-adf/esp-idf/components/esp_pm/include -I/opt/esp32/esp-adf/esp-idf/components/esp_ringbuf/include -I/opt/esp32/esp-adf/esp-idf/components/esp_adc/include -I/opt/esp32/esp-adf/esp-idf/components/esp_adc/interface -I/opt/esp32/esp-adf/esp-idf/components/esp_adc/esp32s3/include -I/opt/esp32/esp-adf/esp-idf/components/esp_adc/deprecated/include -I/opt/esp32/esp-adf/esp-idf/components/ulp/ulp_riscv/ulp_core/include -Os -march=rv32imc_zicsr_zifencei -mdiv -fdata-sections -ffunction-sections -MD -MT CMakeFiles/ulp_main.dir/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c.obj -MF CMakeFiles/ulp_main.dir/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c.obj.d -o CMakeFiles/ulp_main.dir/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c.obj -c /home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c
/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c: In function 'i2c_claim':
/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c:85:24: error: expected ';' before 'ulp_riscv_delay_cycles'
   85 | #define DELAY(wait_us) ulp_riscv_delay_cycles((wait_us)*ULP_RISCV_CYCLES_PER_US)
      |                        ^~~~~~~~~~~~~~~~~~~~~~
/home/iris/Development/Source/esp-idf-TCA9555/components/rot_btn_i2c_riscv/ulp/riscv_main.c:101:3: note: in expansion of macro 'DELAY'
  101 |   DELAY(T_BUF);
      |   ^~~~~
ninja: build stopped: subcommand failed.
[2/14] Performing build step for 'bootloader'
[1/1] cd /home/iris/Development/Source/esp-idf-TCA9555/build/bootloader/esp-idf/esptool_py && /home/iris/.espressif/python_env/idf5.1_py3.12_env/bin/python /opt/esp32/esp-adf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/iris/Development/Source/esp-idf-TCA9555/build/bootloader/bootloader.bin
Bootloader binary size 0x51c0 bytes. 0x2e40 bytes (36%) free.
ninja: build stopped: subcommand failed.
